# SenseVoice

./: .gitignore  DEVICE_GUIDE.md  demo_cpu.py  pyproject.toml  webui.py
